@@ -40,6 +40,8 @@ func (s *System) Transform() common.MapStr {
 	utility.Add(system, "hostname", s.Hostname)
 	utility.Add(system, "architecture", s.Architecture)
 	utility.Add(system, "platform", s.Platform)
-	utility.Add(system, "ip", s.IP)
+	if s.IP != nil && *s.IP != "" {
+		utility.Add(system, "ip", s.IP)
+	}
 	return system
 }
